kubernetes/tst/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tst
  labels:
    environment: tst
