kubernetes/tst/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tst-ingress
  namespace: tst
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: tst.app.company.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 80
